--- a/download.html
+++ b/download.html
@@ -6,92 +6,42 @@
     <title>Final Step - Filmixo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* --- General Reset --- */
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; }
         
-        /* ফুটারকে নিচে রাখার জন্য ফ্লেক্সবক্স সেটআপ */
-        body { 
-            background-color: #0f0f0f; 
-            color: #fff; 
-            display: flex; 
-            flex-direction: column; 
-            min-height: 100vh; 
-        }
+        body { background-color: #0f0f0f; color: #fff; display: flex; flex-direction: column; align-items: center; min-height: 100vh; }
 
         /* --- Luxury Header --- */
         header { 
-            width: 100%; 
-            max-width: 600px; 
-            padding: 15px 20px; 
-            text-align: center; 
-            background: #1a1a1a; 
-            border-bottom: 2px solid #FFD700; 
-            margin: 0 auto; 
-            z-index: 100;
+            width: 100%; max-width: 600px; padding: 15px 20px; text-align: center; 
+            background: #1a1a1a; border-bottom: 2px solid #FFD700; 
+            position: sticky; top: 0; z-index: 100; 
         }
         .logo { font-size: 26px; font-weight: 900; color: #FFD700; text-transform: uppercase; letter-spacing: 3px; text-shadow: 0 0 10px rgba(255, 215, 0, 0.5); }
 
         /* --- Content Wrapper --- */
-        .container { 
-            width: 100%; 
-            max-width: 600px; 
-            padding: 20px; 
-            text-align: center; 
-            margin: 0 auto; 
-            flex: 1; /* এটি কন্টেন্টকে জায়গা নিয়ে ফুটারকে নিচে পাঠিয়ে দিবে */
-        }
+        .container { width: 100%; max-width: 600px; padding: 30px 20px; text-align: center; flex-grow: 1; display: flex; flex-direction: column; align-items: center; }
 
-        .movie-card { width: 100%; background: #1a1a1a; border-radius: 15px; padding: 20px; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5); margin-bottom: 20px; }
+        .movie-card { width: 100%; background: #1a1a1a; border-radius: 15px; padding: 20px; border: 1px solid #333; box-shadow: 0 10px 30px rgba(0,0,0,0.5); margin-bottom: 30px; }
         .movie-thumb { width: 100%; border-radius: 10px; margin-bottom: 15px; border: 1px solid #444; }
         .movie-title { font-size: 22px; font-weight: 700; color: #fff; margin-bottom: 10px; line-height: 1.3; }
         .status-badge { display: inline-block; padding: 5px 15px; background: rgba(255, 215, 0, 0.1); color: #FFD700; border-radius: 20px; font-size: 13px; font-weight: 600; margin-bottom: 20px; border: 1px solid #FFD700; }
 
-        /* --- Luxury Button (Updated) --- */
+        /* --- Luxury Button --- */
         .final-dl-btn { 
-            display: none; 
-            width: 90%; 
-            margin: 0 auto; 
-            padding: 14px; 
-            border-radius: 50px; 
-            font-size: 16px; 
-            font-weight: 900; 
-            text-transform: uppercase; 
-            border: 2px solid #ffffff; 
-            cursor: pointer; 
-            text-decoration: none;
-            /* গ্রেডিয়েন্ট কালার */
-            background: linear-gradient(135deg, #FFD700, #FFB900);
-            color: #000; 
-            /* শ্যাডো ইফেক্ট বন্ধ করা হয়েছে */
-            box-shadow: none; 
-            transition: all 0.3s ease; 
-            align-items: center; 
-            justify-content: center; 
-            gap: 10px;
-            -webkit-tap-highlight-color: transparent;
-            outline: none;
+            display: none; width: 85%; padding: 16px; border-radius: 50px; font-size: 17px; font-weight: 900; 
+            text-transform: uppercase; border: 2px solid #ffffff; cursor: pointer; text-decoration: none;
+            color: #000; box-shadow: none; 
+            transition: transform 0.2s; align-items: center; justify-content: center; gap: 10px;
+            -webkit-tap-highlight-color: transparent; outline: none;
         }
+        
+        /* বাটনে ক্লিক করলে শুধু দেবে যাবে, কালার চেঞ্জ হবে না */
+        .final-dl-btn:active { transform: scale(0.94); }
 
-        /* প্রতি ক্লিকে বা অ্যাকশনে কালার পরিবর্তন (Hover/Active) */
-        .final-dl-btn:hover, .final-dl-btn:active { 
-            background: linear-gradient(135deg, #ffffff, #FFD700); /* কালার রিভার্স বা চেঞ্জ হবে */
-            transform: scale(0.96); 
-            box-shadow: none;
-        }
-
-        .loader { width: 50px; height: 50px; border: 5px solid #333; border-top: 5px solid #FFD700; border-radius: 50%; animation: spin 1s linear infinite; margin: 40px auto; }
-        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-
-        /* --- Footer (Fixed to Bottom) --- */
+        /* --- Footer --- */
         footer { 
-            width: 100%; 
-            max-width: 600px; 
-            padding: 15px; 
-            text-align: center; 
-            color: #777; 
-            font-size: 14px; 
-            border-top: 1px solid #222; 
-            margin: 0 auto;
+            width: 100%; max-width: 600px; padding: 20px; text-align: center; 
+            color: #777; font-size: 14px; border-top: 1px solid #222; 
             background: #0f0f0f;
         }
         footer b { color: #FFD700; }
@@ -107,7 +57,8 @@
 
     <div class="container">
         <div id="loading-ui">
-            <div class="loader"></div>
+            <div class="loader" style="width: 50px; height: 50px; border: 5px solid #333; border-top: 5px solid #FFD700; border-radius: 50%; animation: spin 1s linear infinite; margin: 40px auto;"></div>
+            <style>@keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }</style>
             <p>Processing Your Request...</p>
         </div>
 
@@ -130,6 +81,16 @@
     </footer>
 
     <script>
+        // রিফ্রেশে বাটনের কালার পরিবর্তনের লজিক
+        const buttonColors = [
+            'linear-gradient(135deg, #FFD700, #b8860b)', // Gold
+            'linear-gradient(135deg, #00c6ff, #0072ff)', // Blue
+            'linear-gradient(135deg, #f80759, #bc4e9c)', // Pink/Red
+            'linear-gradient(135deg, #11998e, #38ef7d)', // Green
+            'linear-gradient(135deg, #FC466B, #3F5EFB)', // Purple/Red
+            'linear-gradient(135deg, #f7971e, #ffd200)'  // Orange/Yellow
+        ];
+
         const urlParams = new URLSearchParams(window.location.search);
         const postId = urlParams.get('id');
 
@@ -146,6 +107,10 @@
                     const downloadBtn = document.getElementById('main-dl-link');
                     downloadBtn.href = movie.downloadLink1;
                     downloadBtn.style.display = 'flex';
+
+                    // প্রতি রিফ্রেশে র‍্যান্ডম কালার সেট করা
+                    const randomColor = buttonColors[Math.floor(Math.random() * buttonColors.length)];
+                    downloadBtn.style.background = randomColor;
 
                     document.getElementById('loading-ui').classList.add('hidden');
                     document.getElementById('download-ui').classList.remove('hidden');
