--- a/download.html
+++ b/download.html
@@ -76,6 +76,19 @@
                 <img id="movie-img" src="" alt="Thumbnail" class="movie-thumb">
                 <div class="movie-title" id="movie-name">Movie Title Loading...</div>
                 <div class="status-badge"><i class="fa-solid fa-check-circle"></i> Verification Complete</div>
+  <script type="text/javascript">
+  atOptions = {
+  	'key' : 'a77d37045b73ff51a416345b6ebcc586',
+  	'format' : 'iframe',
+  	'height' : 50,
+  	'width' : 320,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://prototypesorting.com/a77d37045b73ff51a416345b6ebcc586/invoke.js"
+></script>
                 <p style="color: #aaa; font-size: 14px; margin-bottom: 20px;">Your high-speed download link is ready. Click the button below to start.</p>
                 
                 <a href="#" id="main-dl-link" class="final-dl-btn" target="_blank" rel="noopener noreferrer">
