--- a/download.html
+++ b/download.html
@@ -31,11 +31,11 @@
         }
         .movie-thumb { width: 100%; border-radius: 10px; margin-bottom: 15px; border: 1px solid #444; }
         .movie-title { font-size: 22px; font-weight: 700; color: #fff; margin-bottom: 10px; line-height: 1.3; }
-        .status-badge { display: inline-block; padding: 5px 10px; background: rgba(255, 215, 0, 0.1); color: #FFD700; border-radius: 20px; font-size: 13px; font-weight: 600; margin-bottom: 5px; border: 1px solid #FFD700; }
+        .status-badge { display: inline-block; padding: 5px 10px; background: rgba(255, 215, 0, 0.1); color: #FFD700; border-radius: 20px; font-size: 13px; font-weight: 600; margin-top: 5px; margin-bottom: 0px; border: 1px solid #FFD700; }
 
         /* --- Luxury Button --- */
         .final-dl-btn { 
-            display: none; width: 90%; max-width: 400px; padding: 16px; border-radius: 50px; 
+            display: none; width: 90%; max-width: 400px; padding: 10px; border-radius: 50px; 
             font-size: 17px; font-weight: 900; text-transform: uppercase; 
             border: 2px solid #ffffff; cursor: pointer; text-decoration: none;
             color: #000; transition: transform 0.2s; 
