--- a/download.html
+++ b/download.html
@@ -35,7 +35,7 @@
 
         /* --- Luxury Button --- */
         .final-dl-btn { 
-            display: none; width: 90%; max-width: 400px; padding: 15px; border-radius: 50px; 
+            display: none; width: 90%; max-width: 400px; padding: 15px; margin-top: 5px; margin-bottom: 5px; border-radius: 50px; 
             font-size: 17px; font-weight: 900; text-transform: uppercase; 
             border: 2px solid #ffffff; cursor: pointer; text-decoration: none;
             color: #000; transition: transform 0.2s; 
