--- a/download.html
+++ b/download.html
@@ -48,6 +48,7 @@
         .movie-card { 
             width: 100%; background: var(--glass-bg); border-radius: 15px; 
             padding: 15px; /* প্যাডিং কমানো হয়েছে */
+            padding-bottom: 35px;
             border: 1px solid var(--glass-border);
             display: none; text-align: center; 
         } 
@@ -80,7 +81,7 @@
         
         .final-dl-btn { 
             display: flex; align-items: center; justify-content: center; 
-            width: 280px; height: 45px; border-radius: 50px; 
+            width: 280px; height: 50px; border-radius: 50px; 
             font-size: 15px; font-weight: 900; text-transform: uppercase; 
             border: 2px solid #ffffff; cursor: pointer; color: #000; 
             transition: transform 0.2s; gap: 10px; opacity: 0.6; 
