--- a/download.html
+++ b/download.html
@@ -102,8 +102,12 @@
 
 <div class="main-wrapper">
     <header><div class="logo-area">FILMIXO</div></header>
+    </div>
 
-    <script type="text/javascript">
+    <div style="display: flex; justify-content: center; overflow: hidden; width: 100%;">
+    <div style="flex-shrink: 0;">
+     
+<script type="text/javascript">
   atOptions = {
   	'key' : 'da9154b956691d2aa7c677010e7b6501',
   	'format' : 'iframe',
@@ -117,11 +121,8 @@
   src="https://prototypesorting.com/da9154b956691d2aa7c677010e7b6501/invoke.js"
 ></script>
 
-    <div class="container">
-        <div id="movie-content" class="movie-card">
-            </div>
-    </div>
-
+</div>
+    
     <footer class="site-footer">
         Copyright © 2026 <b>Filmixo.com</b>. All rights reserved.
     </footer>
