--- a/download.html
+++ b/download.html
@@ -103,8 +103,12 @@
 <div class="main-wrapper">
     <header><div class="logo-area">FILMIXO</div></header>
 
+
     
-    
+       <div class="container">
+        <div id="movie-content" class="movie-card">
+            </div>
+       </div>
     <footer class="site-footer">
         Copyright © 2026 <b>Filmixo.com</b>. All rights reserved.
     </footer>
