--- a/download.html
+++ b/download.html
@@ -42,7 +42,7 @@
             text-transform: uppercase; letter-spacing: 3px; 
         }
 
-        .container { flex: 1; padding: 15px; }
+        .container { flex: 1; padding: 1px 15px; }
 
         /* গ্লাস ডিজাইন কার্ড - অ্যানিমেশন রিমুভড */
         .movie-card { 
@@ -105,7 +105,7 @@
 
 
 
-    <div style="display: flex; justify-content: center; overflow: hidden; width: 100%;">
+    <div style="display: flex; justify-content: center; overflow: hidden; width: 100%; margin: 5px 0">
     <div style="flex-shrink: 0;">
      
 <script type="text/javascript">
