--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FILMIXO</title>
+    <title>VLINK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- ইমেজ প্রি-লোড এবং প্রায়োরিটি হাই -->
@@ -176,8 +176,8 @@
         </div>
 
         <div class="info-section">
-            <h1 class="website-name">FILMIXO-HUB <i class="verified-badge fa-solid fa-circle-check"></i></h1>
-            <p class="username">@filmixo</p>
+            <h1 class="website-name">VLINK-HUB <i class="verified-badge fa-solid fa-circle-check"></i></h1>
+            <p class="username">@VLINK</p>
             <div class="stats">
                 <!-- 🔥 ফিক্স: ডিফল্ট ভ্যালু 0 রাখা হয়েছে এবং CSS দিয়ে জায়গা ধরা হয়েছে -->
                 <span>Total Videos <b id="total-videos-count">0</b></span> • 
@@ -213,13 +213,13 @@
                 <a href="#" id="link-terms">Terms of Service</a>
             </div>
             <div class="footer-copyright">
-                Copyright © 2026 <a href="index.html">filmixo.com</a>. All rights reserved.
+                Copyright © 2026 <a href="index.html">vlink.com</a>. All rights reserved.
             </div>
         </footer>
 
         <div id="login-view">
             <div class="login-box">
-                <h2 class="login-title">Log in to Filmixo</h2>
+                <h2 class="login-title">Log in to VLink</h2>
                 <form id="loginForm">
                     <div style="text-align:left; margin-bottom:15px;"><label>Email</label><input type="text" placeholder="Enter email" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
                     <div style="text-align:left; margin-bottom:15px;"><label>Password</label><input type="password" placeholder="Enter password" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
