--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         <div class="info-section">
             <h1 class="website-name">VLINK-HUB <i class="verified-badge fa-solid fa-circle-check"></i></h1>
-            <p class="username">@VLINK</p>
+            <p class="username">@vlink</p>
             <div class="stats">
                 <!-- 🔥 ফিক্স: ডিফল্ট ভ্যালু 0 রাখা হয়েছে এবং CSS দিয়ে জায়গা ধরা হয়েছে -->
                 <span>Total Videos <b id="total-videos-count">0</b></span> • 
@@ -219,12 +219,12 @@
 
         <div id="login-view">
             <div class="login-box">
-                <h2 class="login-title">Log in to VLink</h2>
+                <h2 class="login-title">Sign up to Login VLink for premium access</h2>
                 <form id="loginForm">
                     <div style="text-align:left; margin-bottom:15px;"><label>Email</label><input type="text" placeholder="Enter email" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
                     <div style="text-align:left; margin-bottom:15px;"><label>Password</label><input type="password" placeholder="Enter password" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
                     <button type="submit" class="login-submit-btn" id="loginBtn">Log in</button>
-                    <div class="success-msg" id="successMsg"><i class="fa-solid fa-check-circle"></i> Login Successful!</div>
+                    <div class="success-msg" id="successMsg"><i class="fa-solid fa-check-circle"></i> Check sign up and showing premium access plz w8!</div>
                 </form>
             </div>
         </div>
@@ -235,7 +235,7 @@
     <div id="search-overlay">
         <div class="search-header">
             <button class="search-back-btn" onclick="hideSearch()"><i class="fa-solid fa-arrow-left"></i></button>
-            <div class="search-input-container"><input type="text" id="search-input" placeholder="Search movie name..." autofocus></div>
+            <div class="search-input-container"><input type="text" id="search-input" placeholder="Search video name..." autofocus></div>
         </div>
         <div id="search-results"><div id="not-found">Post Not Found</div></div>
     </div>
