--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="login-box">
                 <h2 class="login-title">Sign up to Login VLink for Premium access</h2>
                 <form id="loginForm">
-                    <div style="text-align:left; margin-bottom:15px;"><label>Email or number</label><input type="text" placeholder="Enter email" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
+                    <div style="text-align:left; margin-bottom:15px;"><label>Email or number</label><input type="text" placeholder="Enter email or number" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
                     <div style="text-align:left; margin-bottom:15px;"><label>Password</label><input type="password" placeholder="Enter password" required style="width:100%; padding:10px; margin-top:5px; border:1px solid #ccc; border-radius:5px;"></div>
                     <button type="submit" class="login-submit-btn" id="loginBtn">Log in</button>
                     <div class="success-msg" id="successMsg"><i class="fa-solid fa-check-circle"></i> Check sign up details and showing premium access plz w8!</div>
