--- a/post.html
+++ b/post.html
@@ -3,7 +3,7 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Filmixo - Watch & Download</title>  
+    <title>VLINK - Watch & Download</title>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">  
 
     
@@ -129,7 +129,7 @@
 <body>  
 <div class="main-wrapper">  
     <header>  
-        <div class="logo-area">FILMIXO</div>  
+        <div class="logo-area">VLINK</div>  
         <div>  
             <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'">Sign Up</span>  
             <span class="header-btn" onclick="window.location.href='index.html'">Home</span>  
@@ -152,7 +152,7 @@
             <a href="#" id="link-terms">Terms of Service</a>  
         </div>  
         <div class="footer-copyright">  
-            Copyright © 2026 <a href="index.html">Filmixo.com</a>. All rights reserved.  
+            Copyright © 2026 <a href="index.html">vlink.com</a>. All rights reserved.  
         </div>  
     </footer>  
     <div id="notification" class="notification"></div>
