--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         function showNotification(msg) { const n = document.getElementById('notification'); n.textContent = msg; n.classList.add('show'); setTimeout(() => n.classList.remove('show'), 3000); }
         window.sendEmail = function() { window.location.href = `mailto:${CONFIG.CONTACT_EMAIL}`; }
         window.shareProfile = function() { const url = window.location.href.split('?')[0]; const title = "Secret Binodon"; const text = "Secret Binodon - The #1 Platform for Viral Videos! 🎥 Watch the latest trending videos all in one place. Visit now!"; if (navigator.share) { navigator.share({ title: title, text: text, url: url }).catch((error) => console.log('Share failed', error)); } else { navigator.clipboard.writeText(`${text} ${url}`); showNotification("Website link copied! 📋"); } }
-        window.sharePost = function(id, title) { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
+        window.sharePost = function(id, title) { const url = window.location.origin + `/vdo/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }
 
         function adjustImageAspectRatio(imgElement) {
             const mediaContainer = imgElement.closest('.media-container');
@@ -343,7 +343,7 @@
             totalViewsEl.innerText = formatCount(total);
         }
         
-        window.openPost = (id) => { sessionStorage.setItem('scrollPos', window.scrollY); window.location.href = `/movie/post.html?id=${id}`; };
+        window.openPost = (id) => { sessionStorage.setItem('scrollPos', window.scrollY); window.location.href = `/vdo/post.html?id=${id}`; };
         
         function deactivateNavButtons() { document.querySelectorAll('.nav-btn').forEach(b => { b.classList.remove('active'); b.classList.add('inactive'); }); }
 
