--- a/post.html
+++ b/post.html
@@ -391,8 +391,8 @@
         if(p) p.style.display = 'flex'; if(s) s.style.display = 'none';  
     });  
   
-    window.openPost = (id) => window.location.href = `/movie/post.html?id=${id}`;  
-    window.sharePost = (id, title) => { const url = window.location.origin + `/movie/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }  
+    window.openPost = (id) => window.location.href = `/vdo/post.html?id=${id}`;  
+    window.sharePost = (id, title) => { const url = window.location.origin + `/vdo/post.html?id=${id}`; if (navigator.share) { navigator.share({ title: title, text: title, url: url }).catch((e) => console.log('Share failed', e)); } else { navigator.clipboard.writeText(url); showNotification("Link copied! 📋"); } }  
     window.share = (platform, title) => {  
         const url = encodeURIComponent(window.location.href); const text = encodeURIComponent(title);  
         if (platform === 'msg') { const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent); if (isMobile) window.location.href = `fb-messenger://share/?link=${url}`; else window.open(`https://www.facebook.com/dialog/send?link=${url}&app_id=123456789&redirect_uri=${url}`, '_blank'); } else { let link = ''; if(platform === 'fb') link = `https://www.facebook.com/sharer/sharer.php?u=${url}`; else if(platform === 'wa') link = `https://wa.me/?text=${text}%20${url}`; else if(platform === 'tw') link = `https://twitter.com/intent/tweet?text=${text}&url=${url}`; else if(platform === 'tg') link = `https://t.me/share/url?url=${url}&text=${text}`; window.open(link, '_blank'); }  
