--- a/post.html
+++ b/post.html
@@ -131,7 +131,7 @@
     <header>  
         <div class="logo-area">VL-ZONE</div>  
         <div>  
-            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'">Tutorial Vdo>tutori  
+            <span class="header-btn" onclick="window.location.href='https://prototypesorting.com/dkhpkccgup?key=f93978b429dfbcf244b3718ef67223ef'">Tutorial Vdo</span>  
             <span class="header-btn" onclick="window.location.href='index.html'">Home</span>  
         </div>  
     </header>  
