--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <span><i class="fa-solid fa-location-dot"></i>🇺🇲 United States</span>
                 <span><i class="fa-regular fa-calendar"></i>Joined 13/12/2025</span>
             </div>
-            <p class="bio">FILMIXO:🍿Your ultimate HD movie hub. Download exclusive releases and trending blockbusters instantly. Stop scrolling, seize the cinema.</p>
+            <p class="bio">VL-ZONE:🤤 this is one of the most popular and best websites for VL-ZONE Viral Video, YouTube Viral Video, Facebook Viral Video, Instagram Viral Video, TikTok Viral Video and much more. Which can be very helpful for your daily life.</p>
         </div>
 
         <div class="nav-bar">
