--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <span><i class="fa-solid fa-location-dot"></i>🇺🇲 United States</span>
                 <span><i class="fa-regular fa-calendar"></i>Joined 13/12/2025</span>
             </div>
-            <p class="bio">VL-ZONE:🤤 this is one of the most popular and best websites for VL-ZONE Viral Video, YouTube Viral Video, Facebook Viral Video, Instagram Viral Video, TikTok Viral Video and much more. Which can be very helpful for your daily life.</p>
+            <p class="bio">VL-ZONE: One of the most popular and exciting sites for VL-ZONE Viral Videos, YouTube, Facebook, Instagram, TikTok & more—packed with the hottest trends to make your daily scroll fun and addictive!</p>
         </div>
 
         <div class="nav-bar">
