--- a/download.html
+++ b/download.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download - Filmixo</title>
+    <title>VL-ZONE - Download</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
    <script type="text/javascript"src="https://prototypesorting.com/a0/08/d1/a008d17e02685c0505877ed11b7610d9.js"></script>
@@ -106,7 +106,7 @@
 <body>
 
 <div class="main-wrapper">
-    <header><div class="logo-area">FILMIXO</div></header>
+    <header><div class="logo-area">VL-ZONE</div></header>
 
 <div style="display: flex; justify-content: center; overflow: hidden; width: 100%; margin: 5px 0">
 <div style="flex-shrink: 0;">
@@ -141,7 +141,7 @@
 <div id="container-247476cdf6d68a31797ec615e7b10572"></div>
 
     <footer class="site-footer">
-        Copyright © 2026 <b>Filmixo.com</b>. All rights reserved.
+        Copyright © 2026 <b>vlzone.com</b>. All rights reserved.
     </footer>
 </div>
 
